# workspace

./: .clang-format  .clang-tidy  .gitignore  BUILD.opencv  CMakeConfiguration.cmake  CMakeLists.txt  WORKSPACE  data.yaml  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h  workspace.pro
bin_debug/: Makefile  moc_mainwindow.cpp  workspace
bin_release/: Makefile  ui_mainwindow.h  workspace
include/: action.h  camera.h  game.h  gym.h  opencvworker.h  player.h  rally.h  set.h  team.h  video.h
mylib/: BUILD  action.cpp  action.h  camera.cpp  camera.h  convopencv2qt.h  game.h  gym.h  opencvworker.h  player.cpp  player.h  rally.cpp  rally.h  season.h  team.h  utils.cpp  utils.h  video.h
src/: action.cpp  action.h  camera.cpp  camera.h  convopencv2qt.h  game.cpp  game.h  gym.cpp  gym.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  opencvworker.cpp  opencvworker.h  player.cpp  player.h  rally.cpp  rally.h  season.cpp  season.h  set.cpp  set.h  team.cpp  team.h  utils.cpp  utils.h  video.cpp  video.h
test/: BUILD  action_spec.cpp  camera_spec.cpp  example_camera_calibration.yaml  game_spec.cpp  mainwindow_spec.cpp  player_spec.cpp  rally_spec.cpp  season_spec.cpp  set_spec.cpp  team_spec.cpp  unittest.cpp  utils_spec.cpp  video_spec.cpp
